@@ -70,6 +70,10 @@
   <string id="30026">Ask Noah</string>
   <string id="30226">The Ask Noah Show is a weekly radio call in show where we take your tech questions or business in tech questions live on the air.</string>
 
+  <string id="30027">Linux Action News</string>
+  <string id="30227">Weekly Linux news and analysis by Chris and Joe. Linux is everywhere, and runs just about everything. It's the ubiquitous platform that runs on everything, everywhere. Even Windows. Linux Action News is a new show born into this reality, built to cover this landscape.</string>
+
+
   <!-- Settings -->
   <string id="30100">Основни</string>
   <string id="30101">Качество</string>
