@@ -2,6 +2,7 @@
 - Added a FeedParser class to help in parsing the RSS feeds
   - By @rickyphewitt
 - Added Ask Noah Show
+- Added Linux Action News
 
 [B]Version 3.3.0 October 6th, 2016[/B]
 - New Show: User Error
